jump to row and stop animation

--- a/public/css/bl.css
+++ b/public/css/bl.css
@@ -10,22 +10,15 @@
 }
 
 .point:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    /* -webkit-box-sizing: border-box; */
-    -moz-box-sizing: border-box;
-    /* box-sizing: border-box; */
     content: ".";
     font-size: 50pt;
     font-weight: bold;
     color: green;
     top: -7px;
-    margin-left: -20px;
+    margin-left: -26px;
     display: -webkit-box;
     line-height: 0px;
     position: relative;
-
 }
 .table-responsive{
   overflow: visible !important;
